src/objects/Apttus__ReviewCycle__c.object
<CustomObject>
    <description>Represents a review cycle created for parallel review of a document.</description>
    <fields>
        <fullName>Apttus__Comment__c</fullName>
        <description>Comment on canceling or Ending the Review Cycle.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Comment on canceling or Ending the Review Cycle.</inlineHelpText>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__EmailBody__c</fullName>
        <description>Holds the body of the email sent during Review.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__EmailSubject__c</fullName>
        <description>Holds the email subject of the email sent during Review.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__EndedCancelledBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the User who has cancelled or Ended the review.</description>
        <inlineHelpText>Review Ended or Cancelled by user.</inlineHelpText>
        <label>Ended/Cancelled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReviewCycles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__EndedCancelledOn__c</fullName>
        <description>DateTime when the review is cancelled or Ended</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Ended/Cancelled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus__FinalDocumentVersionDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Final document version of the review.</description>
        <inlineHelpText>Final document version of the review.</inlineHelpText>
        <label>Final Document Version Detail</label>
        <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
        <relationshipLabel>Review Cycles (Final Document Version Detail)</relationshipLabel>
        <relationshipName>ReviewCyclesFinal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__InitiatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Review Cycle initiator user</description>
        <inlineHelpText>Review Cycle initiator user</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>InitiatorReviewCycles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__OriginalDocumentVersionDetail__c</fullName>
        <description>Initial document version sent for review.</description>
        <inlineHelpText>Initial document version sent for review.</inlineHelpText>
        <label>Original Document Version Detail</label>
        <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
        <relationshipLabel>Review Cycles</relationshipLabel>
        <relationshipName>ReviewCycles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__ProtectionLevel__c</fullName>
        <description>Protection Level applied to the Document</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Protection Level applied to the Document</inlineHelpText>
        <label>Protection Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ProtectionType__c</fullName>
        <description>Protection Type</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Protection Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ReviewCycleType__c</fullName>
        <description>Review Cycle Type “MS Teams” for MS Teams integration and “Parallel Review” or null for Parallel review</description>
        <inlineHelpText>Please provide Review Cycle Type</inlineHelpText>
        <label>Review Cycle Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Parallel Review</fullName>
                </value>
                <value>
                    <fullName>MS Teams</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__ReviewStatus__c</fullName>
        <description>Status of the review cycle</description>
        <inlineHelpText>Status of the review cycle</inlineHelpText>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__SupportingDocumentIds__c</fullName>
        <description>Supporting Document Id selected for Review</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Supporting Document Id&apos;s selected for Review</inlineHelpText>
        <label>Supporting Document Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__TemplateId__c</fullName>
        <description>ID of Email Template selected for Parallel Review.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Email Template Id.</inlineHelpText>
        <label>TemplateId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Review Cycle</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Review Cycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Review Cycles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>